--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -25,3 +25,20 @@
 .container {
   @apply mx-auto max-w-[1160px] p-6;
 }
+
+/* Comments Template */
+.form-textarea {
+  @apply block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring focus:border-blue-300;
+}
+
+.form-input {
+  @apply block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring focus:border-blue-300;
+}
+
+.searchform .label {
+  @apply text-slate-800;
+}
+
+.searchform input {
+  @apply border border-slate-800 rounded-sm p-2;
+}
